<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.2">
  <DUT Name="structCylinder" Id="{2284d82d-7f4c-4b0d-b7b0-0b6833f1cce1}">
    <Declaration><![CDATA[TYPE structCylinder :
STRUCT
	In_CylName:STRING;
	(*Trigger*)
	T_ManWork:BOOL;
	T_ManHome:BOOL;
	In_AutoWork:BOOL;
	In_AutoHome:BOOL;
	In_OrgWork:BOOL;
	In_OrgHome:BOOL;
	(*Mechanical Interlock*)
	In_WorkXLock:BOOL;
	In_HomeXLock:BOOL;
	E_WorkErr:BOOL;
	E_HomeErr:BOOL;
	S_WorkPos:BOOL;
	S_HomePos:BOOL;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>